[tool.poetry]
name = "ice-learn"
version = "0.0.5"
description = "A high-level Deep Learning framework that extends PyTorch and PyCUDA."
authors = ["Yuyao Huang <yycv.simon@protonmail.com>"]
license = "MIT"
packages = [
    { include = "ice", from="." },
]
readme = 'README.md'
keywords = ['PyTorch', 'PyCUDA', "Deep Learning framework", "Multi-Task Learning", "multiprocessing"]
repository = 'https://github.com/tjyuyao/ice-learn'

[tool.poetry.dependencies]
python = "^3.8"
multiprocess = "^0.70.12"
PySocks = "^1.7.1"
pycuda = {version = "^2021.1", optional = true}

[tool.poetry.extras]
pycuda = ["pycuda"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
xdoctest = "^0.15.10"
Pygments = "^2.11.2"
yapf = "^0.32.0"
poethepoet = "^0.12.2"
mkdocs = "^1.2.3"
mkdocs-awesome-pages-plugin = "^2.6.1"
mkdocs-material = "^8.1.8"
python-markdown-math = "^0.8"

[tool.poetry.scripts]
waitfinish = 'ice.api.scripts.waitfinish:_cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"