[metadata]
name = ice-learn
version = 0.4.8
author = Yuyao Huang
author_email = huangyuyao@outlook.com
description = A high-level Deep Learning framework that extends PyTorch and PyCUDA.
keywords = keywords = PyTorch, PyCUDA, Deep Learning framework, Multi-Task Learning, multiprocessing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tjyuyao/ice-learn
project_urls =
    Bug Tracker = https://github.com/tjyuyao/ice-learn/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    neurlink >= 0.2.2
    multiprocess >= 0.70.12
    PySocks >= 1.7.1
    varname >= 0.8.1
    opencv-python >= 4.5.5
    tqdm >= 4.62.3
    tensorboard >= 2.8.0
    setuptools >= 59.5.0
    gputil >= 1.4.0

[options.extras_require]
dev =
    pytest >= 6.2.5
    xdoctest >= 0.15.10
    Pygments >= 2.11.2
    yapf >= 0.32.0
    mkdocs >= 1.2.3
    mkdocs-awesome-pages-plugin >= 2.6.1
    mkdocs-material >= 8.1.8
    python-markdown-math >= 0.8

[options.entry_points]
console_scripts =
    wait_process = ice.api.scripts.wait_process:_cli
